--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <title>Wordpress</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <section class="promo">
+        <div class="container">
+            <div class="logo">
+                <img src="icons/logo.png" alt="logo" class="logo__image">
+                <div class="logo__text">WordPress интенсив</div>
+            </div>
+
+            <h1 class="title">Создать свой сайт на WordPress</h1>
+            <div class="simple">
+                <h2 class="title__big">это просто!</h2>
+            </div>
+            <h2 class="title">Куда сложнее сделать это правильно!</h2>
+            
+            <div class="promo__text">Ежедневно в России появляется более 5 000 новых сайтов. <br>И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте на предстоящем двухдневном <span>бесплатном</span> интенсиве!</div>
+
+            <button class="promo__btn">Записаться на интенсив!</button>
+
+            <div class="more">
+                <div class="more__text">узнать больше об интенсиве</div>
+                <a href="#" class="more__link"><img src="icons/down.png" alt="arrow" class="more__img"></a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
