--- a/index.html
+++ b/index.html
@@ -28,9 +28,48 @@
 
             <div class="more">
                 <div class="more__text">узнать больше об интенсиве</div>
-                <a href="#" class="more__link"><img src="icons/down.png" alt="arrow" class="more__img"></a>
+                <img src="icons/down.png" alt="arrow" class="more__img">
             </div>
         </div>
     </section>
+
+    <section class="waiting">
+        <div class="container">
+            <h2 class="waiting__title">Что вас ждет в нашем интенсиве?</h2>
+            <div class="line"></div>
+            <div class="waiting__subtitle">2 бесплатных полноценных обучающих вебинара, где:</div>
+
+            <div class="waiting__wrapper">
+                <div class="waiting__item">
+                    <img src="img/waiting_1.png" alt="waiting" class="waiting__img">
+                    <div class="waiting__text">Всего за два бесплатных вебинара мы научим вас,
+                        как создать свой сайт на WordPress. </div>
+                </div>
+                <div class="waiting__item">
+                    <img src="img/waiting_2.png" alt="waiting" class="waiting__img">
+                    <div class="waiting__text">Покажем, как правильно оптимизировать сайт и сделать его привлекательным для поисковых систем. Только свежая, профессиональная и актуальная информация!</div>
+                </div>
+                <div class="waiting__item">
+                    <img src="img/waiting_3.png" alt="waiting" class="waiting__img">
+                    <div class="waiting__text">Вы узнаете, что такое «хорошая индексация»,«высокая посещаемость», «стабильный прирост посетителей», «ТОП по запросам» и, что намного важнее, как добиться всех этих показателей!</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="optimization">
+        <div class="container">
+            <img src="img/woman_bg.png" alt="woman" class="optimization__woman">
+            <div class="optimization__wrapper">
+                <h2 class="optimization__title">Что такое оптимизация и зачем она нужна?</h2>
+                <p class="optimization__text">
+                    На просторах интернета несчетное количество действующих и даже заброшенных сайтов. Большинство из них совпадает не только по категориям, но и по содержанию.<br><br>Представьте себе тысячи сайтов, на которых тем или иным образом предоставляется одна и та же информация или продается одна и та же услуга. И    попасть на эти сайты можно лишь по тематическим запросам в поисковых системах/<br><br>Но как вам быть, если ваш сайт похож на сотню или тысячу таких же, а на одной странице гугла или яндекса всего 10 позиций? Как привести     посетителей страницы своего ресурса? Именно для этого и нужна оптимизация – для вывода вашего сайта на первую страницу поиска!<br><br>
+                    <span> Мы научим вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести его на первые страницы, обходя всех     конкурентов.</span>
+                </p>
+            </div>
+            </div>
+    </section>
+
+    
 </body>
 </html>
