added layout for results section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,33 @@
             </div>
     </section>
 
-    
+    <section class="results">
+        <div class="container">
+            <h2 class="results__title">По окончании обучения Вы сможете!</h2>
+            <div class="line"></div>
+            <div class="results__wrapper">
+                <div class="results__item">
+                    <img src="icons/finish_icon_1.png" alt="image" class="result__img">
+                    <div class="result__name">Создать свой сайт или блог</div>
+                </div>
+                <div class="results__item">
+                    <img src="icons/finish_icon_2.png" alt="image" class="result__img">
+                    <div class="result__name">Правильно его оптимизировать</div>
+                </div>
+                <div class="results__item">
+                    <img src="icons/finish_icon_3.png" alt="image" class="result__img">
+                    <div class="result__name">Обеспечить ему медленный, но верный рост в ТОП</div>
+                </div>
+                <div class="results__item">
+                    <img src="icons/finish_icon_4.png" alt="image" class="result__img">
+                    <div class="result__name">Достигнуть стабильного прироста посетителей</div>
+                </div>
+                <div class="results__item">
+                    <img src="icons/finish_icon_5.png" alt="image" class="result__img">
+                    <div class="result__name">Получать ощутимую прибыль</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
