added layout and styles for news section

--- a/index.html
+++ b/index.html
@@ -106,5 +106,14 @@
             <button class="entry__btn">Записаться на интенсив!</button>
         </div>
     </section>
+
+    <section class="news">
+        <div class="container">
+            <img src="img/news.png" alt="image" class="news__img">
+            <div class="news__text">Первый вебинар состоится:</div>
+            <div class="news__time">10 сентября в 20:00 по Москве</div>
+            <div class="news__sub">Успейте записаться, количество мест ограничено!</div>
+        </div>
+    </section>
 </body>
 </html>
