added layout for footer

--- a/index.html
+++ b/index.html
@@ -115,5 +115,15 @@
             <div class="news__sub">Успейте записаться, количество мест ограничено!</div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="container">
+            <ul class="footer__list">
+                <li class="footer__item">Служба поддержки</li>|
+                <li class="footer__item">Политика конфиденциальности</li>
+            </ul>
+            <p class="footer_text">Позвоните нам <a href="tel: 8-800-555-01-21">8-800-555-01-21</a></p>
+        </div>
+    </footer>
 </body>
 </html>
