--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon">
     <title>Wordpress</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
