--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     <footer class="footer">
         <div class="container">
             <ul class="footer__list">
-                <li class="footer__item">Служба поддержки |</li>
-                <li class="footer__item"> Политика конфиденциальности</li>
+                <li class="footer__item"> <a href="#" class="footer__link">Служба поддержки |</a></li>
+                <li class="footer__item"> <a href="#" class="footer__link">Политика конфиденциальности</a></li>
             </ul>
             <p class="footer_text">Позвоните нам <a href="tel: 8-800-555-01-21">8-800-555-01-21</a></p>
         </div>
