--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <li class="footer__item"> <a href="#" class="footer__link">Служба поддержки |</a></li>
                 <li class="footer__item"> <a href="#" class="footer__link">Политика конфиденциальности</a></li>
             </ul>
-            <p class="footer_text">Позвоните нам <a href="tel: 8-800-555-01-21">8-800-555-01-21</a></p>
+            <p class="footer__text">Позвоните нам <a href="tel: 8-800-555-01-21">8-800-555-01-21</a></p>
         </div>
     </footer>
 </body>
